# NetDiagnostic

./: .gitignore  CMakeLists.txt  README.md  log2.txt  log3.txt  qtquickcontrols2.conf  rebuild.sh
.claude/: settings.local.json
.deepseek/state/: subagents.v1.json
.github/workflows/: build.yml  deploy-testflight.yml
build-baseline/: net_diagnostic
doc/: design-spec.html  design-tokens.json
doc/figma/: README.md
native/: CMakeLists.txt  PLUGIN_SPEC.md  nd_plugin.h  nd_types.h
native/android/: nd_diagnostics.cpp
native/common/: nd_diagnostic_base.cpp  nd_diagnostic_base.h  nd_factory.cpp  nd_factory.h  nd_platform_bases.h  nd_plugin.cpp
native/ios/: nd_diagnostics.mm
native/linux/: nd_g2.cpp  nd_g2.h  nd_g3_g4.cpp  nd_g3_g4.h  nd_network_adapters.cpp  nd_network_adapters.h  nd_nic_advanced.cpp  nd_nic_advanced.h  nd_wifi.cpp  nd_wifi.h  nd_wired.cpp  nd_wired.h
native/macos/: nd_diagnostics.mm
native/windows/: nd_diagnostics.cpp
resources/: Info.plist  netanalysis.rc  resources.qrc
resources/android/: AndroidManifest.xml
resources/config/: android.conf  ios.conf  windows.conf
resources/icons/: report.svg.bak
resources/qml/: AppContent.qml  main.qml
resources/qml/screens/: ConfigScreen.qml  DashboardScreen.qml  DiagnosticScreen.qml  ReportScreen.qml  SettingsScreen.qml  SimulatorScreen.qml
resources/qml/theme/: AppTheme.qml  Translations.qml  qmldir
resources/qml/widgets/: DiagGroupPanel.qml  LiveProgressPanel.qml  PortScanConfig.qml  SummaryCards.qml  TargetAnalysisPanel.qml  (+3 more)
scripts/: build-all.sh  build-static.ps1  build-windows-x64.ps1  clean-all-debug.ps1  clean-trace.ps1
scripts/ios/: asc-app.sh
scripts/toolchain/: linux-arm64.cmake  linux-x86_64.cmake  windows-arm64.cmake  windows-x86_64.cmake
src/: main.cpp  main_simulator.cpp
src/app/: AppState.cpp  AppState.h  NativeService.cpp  NativeService.h
src/controllers/: ControllerFactory.cpp
src/engine/: IosWiFiHelper.h  IosWiFiHelper.mm  PlatformCommand.cpp  PlatformCommand.h
src/models/: DiagId.h  DiagnosticResult.cpp  DiagnosticResult.h  TestId.h
src/util/: DebugSwitch.h  DnsResolver.cpp  Logger.cpp  Logger.h  PingParser.cpp
tests/: CMakeLists.txt  test_engine_quick.cpp
(+25 files in other folders)
